# spacetyckiting

./: LICENSE  README.md
clients/: .gitignore  README.md  client-automaton.dot
clients/F#/: README.md  Tyckiting.sln
clients/F#/Tyckiting/: Actions.fs  Ai.fs  Ai.fsi  CheatSheet.fsx  CommonLibrary.fs  Domain.fs  JsonParser.fs  Main.fs  Network.fs  ParameterParser.fs  Program.fs  Test.fsx  Tyckiting.fsproj
clients/clojure/: README.md  project.clj
clients/d/: .gitignore  README.md  dub.sdl  dub.selections.json
clients/d/source/: app.d  cli.d  client.d  interfaces.d
clients/go/: .gitignore  README.md
clients/go/client/: bot.go  bot_test.go  client.go  client_test.go  messages.go
clients/go/dummy/: dummy.go
clients/haskell/: .gitignore  README.md  cabal.config  install-toolbelt.sh  stack-lts-2.yaml  stack-lts-5.yaml  tyckiting-client.cabal
clients/haskell/client/: Console.hs  Main.hs  Messages.hs  Options.hs
clients/haskell/scripts/: build.sh  buildindocker.sh
clients/haskell/src/Options/Applicative/: Extras.hs
clients/haskell/src/Tyckiting/: AI.hs  Action.hs  Event.hs  Messages.hs  Position.hs  Types.hs
clients/haskell/src/Tyckiting/AI/: Joker.hs  Timid.hs
clients/haskell/test/: Tests.hs
clients/javascript/: Makefile  README.md  cli.js  main.js  package.json  position.js
clients/javascript/test/: dummySpec.js
clients/julia/: README.md  cli.jl  setup.jl
clients/julia/tyckiting_client/: client.jl  messages.jl  websocket.jl
clients/python/: README.md  cli.py  requirements.txt  setup.py
clients/python/tyckiting_client/: actions.py  main.py  messages.py
clients/ruby/: Gemfile  README.md  client.rb
clients/ruby/ai/: base.rb  dummy.rb
clients/ruby/lib/: action.rb  bot.rb  bot_data.rb  event.rb  game_config.rb  message.rb  option_parser.rb  pos.rb
clients/rust/: Cargo.toml  README.md
clients/rust/src/: main.rs
clients/scala/: .gitignore  README.md  build.sbt
clients/swift/: .gitignore  Cartfile  Cartfile.resolved  README.md
clients/swift/TyckitingClient/: BaseAI.swift  Client.swift  DummyAI.swift  Info.plist  Messages.swift  Models.swift  TyckitingClient-Bridging-Header.h  Utils.swift  main.swift
clients/swift/TyckitingClient.xcodeproj/: project.pbxproj
clients/swift/TyckitingClientTests/: TyckitingClientTests.swift
server/: .eslintrc  .gitignore  .jscsrc  DETAILS.md  Makefile  README.md  create-new-ai  default-config.json  package.json  server.sublime-project  start-server.js  start-spectate.js
server/server/: events.js  game.js  gameloop.js  messages.js  position.js  typify.js
server/spectator/: colors.js  config.js  cube.js  hex.js  hexGrid.js  index.html  main.css  main.js  mainScreen.js  messageBox.js  point.js  test.json  ui.js
server/test/: positionSpec.js
(+56 files in other folders)
