name:                tyckiting-client
version:             0.1.0.0
synopsis:            Space Tyckiting Haskell client
description:         Space Tyckiting Haskell client
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           Copyright © 2015, Futurice
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Tyckiting.Messages,
                     Tyckiting.Position,
                     Tyckiting.Event,
                     Tyckiting.Action,
                     Tyckiting.Types,
                     Tyckiting.AI,
                     Tyckiting.AI.Timid,
                     Tyckiting.AI.Joker,
                     Options.Applicative.Extras
  ghc-options:       -Wall
  build-depends:     base >=4.7 && <4.9, 
                     base-compat,
                     MonadRandom >=0.3,
                     aeson >=0.8,
                     ansi-terminal >=0.6,
                     arrows >=0.4,
                     bytestring >=0.10,
                     mtl >=2.1,
                     optparse-applicative >= 0.11,
                     random >= 1.0,
                     text >=1.2,
                     tf-random >=0.5,
                     transformers >=0.3,
                     websockets >=0.9
  hs-source-dirs:    src
  default-language:  Haskell2010

executable tyckiting-client
  main-is:           Main.hs
  other-modules:     Console, Messages, Options
  ghc-options:       -Wall
  build-depends:     base >=4.7 && <4.9,
                     base-compat,
                     MonadRandom,
                     aeson,
                     ansi-terminal,
                     arrows,
                     bytestring,
                     lens,
                     lens-aeson,
                     mtl,
                     optparse-applicative,
                     random,
                     split,
                     text,
                     tf-random,
                     transformers,
                     websockets,
                     wreq,
                     tyckiting-client
  hs-source-dirs:    client
  default-language:  Haskell2010

test-suite test
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0

  build-depends:       base >= 4.6 && < 4.9,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       tyckiting-client
  hs-source-dirs:      test
  ghc-options:         -Wall
  default-language:    Haskell2010
